# digital-photoframe

./: .gitignore  README.md  buildozer.spec  intent_filters.xml  main.py  pyproject.toml
